# turkle

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg
examples/proofreading/: proofreading_template.html
examples/tabular/: goodreads_books.csv  sentiment.csv
scripts/: setup.sh
turkle/: models.py
turkle/migrations/: 0001_initial.py  0010_auto_20210304_1327.py
turkle/templates/: base.html  index.html  preview.html  stats.html  task_assignment.html
turkle_site/: settings.py
