[metadata]
name = turkle
version = 3.1.2
description = A clone of Amazon Mechanical Turk service in your local environment.
long_description = file: README.rst
url = https://github.com/hltcoe/turkle
author = Craig Harman
author_email = craig@craigharman.net
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

[flake8]
max_line_length = 99
exclude =
    turkle/migrations/*,
